# projeto-interdisciplinar-clinica

./: CMakeLists.txt  alunos.txt  aplicacao.c  aplicacao.h  main.c
lib/: constantes.h  estrutura.c  estrutura.h  paciente.h  validacoes.c  validacoes.h
